--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -56,7 +56,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      color: var(--cinza-escuro);
+      color: var(--rosa);
       max-width: 250px; /* limite de largura ajustável */
       white-space: nowrap;
       overflow: hidden;
@@ -137,7 +137,7 @@
     </div>
     <div class="user-menu" onclick="toggleMenu()">
       <div class="user-name">
-        <img src="usuario.png" alt="Usuário" width="28">
+        <img src="logo_usuario_rosa.png" alt="Usuário" width="28">
         <span id="nome-usuario"><strong>Carregando...</strong></span>
       </div>
       <div class="user-dropdown" id="dropdown">
