--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         radial-gradient(circle at 80% 70%, rgba(255, 255, 255, .12) 0%, transparent 40%),
         linear-gradient(to bottom right, #f78ac9 0%, var(--azul) 100%);
     }
-    /* hero */
     .hero {
       flex: 1;
       display: flex;
@@ -45,7 +44,6 @@
       font-size: 2rem;
       font-weight: 600;
     }
-    /* painel */
     .panel {
       width: 100%;
       max-width: 420px;
@@ -57,6 +55,7 @@
       gap: 0.9rem;
       box-shadow: -4px 0 20px rgba(0, 0, 0, .05);
       overflow: auto;
+      position: relative;
     }
     .panel img.logo {
       width: 300px;
@@ -66,10 +65,8 @@
       margin: 0 0 0.6rem 0;
       font-size: 1.25rem;
       font-weight: 600;
-      color: #333;
+      color: var(--rosa);
     }
-
-    /* campos */
     .field {
       position: relative;
       width: 100%;
@@ -79,7 +76,7 @@
       background: var(--cinza-bg);
       border: 1px solid var(--cinza-borda);
       border-radius: 6px;
-      padding: 0.75rem 2.6rem 0.75rem 2.75rem; /* espaço p/ ícone esq e botão dir */
+      padding: 0.75rem 2.6rem 0.75rem 2.75rem;
       font-size: 1rem;
       transition: border-color .2s;
     }
@@ -119,10 +116,8 @@
       stroke: #666;
       transition: opacity .2s;
     }
-
-    /* botão */
     .panel button.submit {
-      width:100%;          /* largura igual aos inputs */
+      width:100%;
       padding:.9rem 1rem;
       border:none;
       border-radius:6px;
@@ -136,7 +131,6 @@
     .panel button.submit:hover {
       background: #1595e6;
     }
-
     .panel a.forgot {
       font-size: .85rem;
       color: var(--azul);
@@ -151,12 +145,22 @@
       min-height: 18px;
       text-align: center;
     }
-
+    .loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.85);
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+      display: none;
+      z-index: 10;
+    }
     @media (max-width: 900px) {
       .hero { display: none; }
     }
-    /* espaçamento vertical entre campos do form */
-    #frmLogin{
+    #frmLogin {
       width:100%;
       display:flex;
       flex-direction:column;
@@ -177,37 +181,34 @@
     <h2>Acesso ao Sistema</h2>
     <div class="msg" id="msg"></div>
     <form id="frmLogin">
-      <!-- E-mail -->
       <div class="field">
         <span class="icon-left">
-          <!-- user icon -->
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 12c2.761 0 5-2.462 5-5.5S14.761 1 12 1 7 3.462 7 6.5 9.239 12 12 12zM3.5 23c-.276 0-.5-.196-.5-.437C3 18.253 6.134 15 10 15h4c3.866 0 7 3.253 7 7.563 0 .24-.224.437-.5.437h-17z"/></svg>
         </span>
         <input type="email" name="email" placeholder="E‑mail corporativo" required>
       </div>
-      <!-- Senha -->
       <div class="field">
         <span class="icon-left">
-          <!-- lock icon -->
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"><rect x="3" y="11" width="18" height="11" rx="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
         </span>
         <input type="password" name="senha" id="senha" placeholder="Senha" required>
         <button type="button" class="toggle-pass" id="togglePass" aria-label="Mostrar senha">
-          <!-- eye icon -->
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/><circle cx="12" cy="12" r="3"/></svg>
         </button>
       </div>
       <button type="submit" class="submit">Entrar</button>
     </form>
     <a href="#" class="forgot">Esqueci minha senha</a>
+    <div class="loading" id="loading">Acessando...</div>
   </div>
 
 <script>
-const URL = 'https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec'; // TODO: substituir pela sua URL
+const URL = 'https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec';
 const frm  = document.getElementById('frmLogin');
 const msg  = document.getElementById('msg');
 const passInput = document.getElementById('senha');
 const toggleBtn = document.getElementById('togglePass');
+const loading = document.getElementById('loading');
 let mostrando = false;
 
 toggleBtn.addEventListener('click', () => {
@@ -219,11 +220,15 @@ toggleBtn.addEventListener('click', () => {
 frm.addEventListener('submit', async (e) => {
   e.preventDefault();
   msg.textContent = '';
+  loading.style.display = 'block';
+
   const fd = new FormData(frm);
   fd.append('action', 'login');
+
   try {
     const r   = await fetch(URL, { method: 'POST', body: fd });
     const txt = await r.text();
+    loading.style.display = 'none';
     if (txt.startsWith('{')) {
       const data = JSON.parse(txt);
       localStorage.setItem('token', data.token);
@@ -233,6 +238,7 @@ frm.addEventListener('submit', async (e) => {
       msg.textContent = txt.replace(/_/g, ' ');
     }
   } catch (err) {
+    loading.style.display = 'none';
     msg.textContent = 'Erro de rede';
   }
 });
