--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -57,7 +57,10 @@
       align-items: center;
       gap: 10px;
       color: var(--rosa);
-      max-width: 250px; /* limite de largura ajustável */
+      font-family: Arial, sans-serif;
+      font-size: 1rem;
+      font-weight: bold;
+      max-width: 250px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
