--- a/gerenciar_conta.html
+++ b/gerenciar_conta.html
@@ -147,7 +147,7 @@
     </a>
     <div class="user-info" onclick="toggleMenu()">
       <img src="logo_usuario_rosa.png" alt="Usuário" />
-      <span id="nome-usuario"><strong>Carregando...</strong></span>
+      <span id="nome-usuario"><strong id="usuario-topbar">Carregando...</strong></span>
       <div class="dropdown" id="dropdown">
         <a href="gerenciar_conta.html">Gerenciar conta</a>
         <a href="#" onclick="logout()">Sair</a>
@@ -184,7 +184,7 @@
       }
 
       if (nomeLocal) {
-        document.getElementById("nome").value = nomeLocal;
+        document.getElementById("usuario-topbar").textContent = nomeLocal;
       }
       if (emailLocal) {
         document.getElementById("email").value = emailLocal;
