--- a/configuracoes.html
+++ b/configuracoes.html
@@ -145,8 +145,8 @@
   <div class="container">
     <h2>Configurações de Acesso</h2>
     <div class="option-box">
-      <a href="#">Usuários</a>
-      <a href="#">Cadastro de Usuários</a>
+      <a href="usuarios.html">Usuários</a>
+      <a href="cadastro_usuarios.html">Cadastro de Usuários</a>
     </div>
   </div>
 
