--- a/cadastro_usuarios.html
+++ b/cadastro_usuarios.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de Usuários - InfoSys</title>
-  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
       --azul: #38b6ff;
@@ -17,12 +16,82 @@
       font-family: Arial, sans-serif;
       background: var(--cinza-claro);
       margin: 0;
-      padding: 2rem;
+      padding: 0;
+    }
+
+    .topbar {
+      width: 100%;
+      height: 60px;
+      background: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 1.5rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 100;
+    }
+
+    .topbar .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+    }
+
+    .topbar .logo img {
+      height: 200px;
+    }
+
+    .topbar .user-menu {
+      position: relative;
+      cursor: pointer;
+      margin-right: 3rem;
+    }
+
+    .topbar .user-name {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: var(--rosa);
+      font-family: Arial, sans-serif;
+      font-size: 1rem;
+      font-weight: bold;
+      max-width: 250px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .user-dropdown {
+      display: none;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      background: white;
+      color: black;
+      border-radius: 4px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      min-width: 180px;
+      z-index: 1000;
+    }
+
+    .user-dropdown a {
+      display: block;
+      padding: 10px;
+      text-decoration: none;
+      color: black;
+    }
+
+    .user-dropdown a:hover {
+      background-color: #eee;
     }
 
     .container {
       max-width: 800px;
-      margin: 0 auto;
+      margin: 100px auto 0;
       background: white;
       border-radius: 8px;
       padding: 2rem;
@@ -74,6 +143,22 @@
   </style>
 </head>
 <body>
+  <div class="topbar">
+    <a href="infosys_dashboard.html" class="logo">
+      <img src="Horizontal-Branco-SemFundo.png" alt="Logo Idealize">
+    </a>
+    <div class="user-menu" onclick="toggleMenu()">
+      <div class="user-name">
+        <img src="logo_usuario_rosa.png" alt="Usuário" width="28">
+        <span id="nome-usuario"><strong>Carregando...</strong></span>
+      </div>
+      <div class="user-dropdown" id="dropdown">
+        <a href="gerenciar_conta.html">Gerenciar conta</a>
+        <a href="#" onclick="logout()">Sair</a>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <h2>Cadastro de Novo Usuário</h2>
 
@@ -81,7 +166,7 @@
       O usuário receberá um e-mail com uma senha provisória e será obrigado a alterá-la no primeiro acesso.
     </div>
 
-    <form id="formCadastro">
+    <form onsubmit="event.preventDefault(); alert('Usuário cadastrado (simulado).');">
       <label for="email">E-mail Corporativo</label>
       <input type="email" id="email" required>
 
@@ -94,62 +179,37 @@
         <option value="MASTER">MASTER</option>
       </select>
 
-      <button type="submit" id="btnCadastrar">Cadastrar Usuário</button>
+      <button type="submit">Cadastrar Usuário</button>
     </form>
   </div>
 
   <script>
-    async function cadastrarUsuario(event) {
-      event.preventDefault();
-
-      const emailInput = document.getElementById("email");
-      const nivelInput = document.getElementById("nivel");
-
-      const email = emailInput.value.trim();
-      const nivel = nivelInput.value;
-
-      if (!email || !nivel) {
-        alert("Por favor, preencha todos os campos.");
-        return;
-      }
-
-      const url = "https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec";
-
-      try {
-        const response = await fetch(url, {
-          method: "POST",
-          body: new URLSearchParams({
-            action: "novo",
-            email: email,
-            nivel: nivel
-          }),
-        });
-
-        const resultado = await response.text();
-
-        switch (resultado) {
-          case "OK":
-            alert("Usuário cadastrado com sucesso! Um e-mail foi enviado com a senha provisória.");
-            emailInput.value = "";
-            nivelInput.value = "";
-            break;
-          case "JA_EXISTE":
-            alert("Este e-mail já está cadastrado.");
-            break;
-          case "FALTANDO_DADOS":
-            alert("Dados incompletos.");
-            break;
-          default:
-            alert("Erro inesperado: " + resultado);
-        }
-
-      } catch (error) {
-        console.error("Erro na requisição:", error);
-        alert("Erro ao tentar cadastrar o usuário.");
-      }
+    const spanNome = document.getElementById("nome-usuario");
+    const nomeLocal = localStorage.getItem("nome_usuario");
+    if (spanNome && nomeLocal) {
+      spanNome.innerHTML = `<strong>${nomeLocal}</strong>`;
     }
 
-    document.getElementById("formCadastro").addEventListener("submit", cadastrarUsuario);
+    function toggleMenu() {
+      const dropdown = document.getElementById("dropdown");
+      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    }
+
+    function logout() {
+      localStorage.removeItem("token");
+      localStorage.removeItem("nivel");
+      localStorage.removeItem("nome_usuario");
+      localStorage.removeItem("email_usuario");
+      window.location.href = "index.html";
+    }
+
+    document.addEventListener("click", function (event) {
+      const dropdown = document.getElementById("dropdown");
+      const userMenu = document.querySelector(".user-menu");
+      if (!userMenu.contains(event.target)) {
+        dropdown.style.display = "none";
+      }
+    });
   </script>
 </body>
 </html>
