--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
       font-size: .85rem;
       color: var(--azul);
       text-decoration: none;
+      cursor: pointer;
     }
     .panel a.forgot:hover {
       text-decoration: underline;
@@ -185,7 +186,7 @@
         <span class="icon-left">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 12c2.761 0 5-2.462 5-5.5S14.761 1 12 1 7 3.462 7 6.5 9.239 12 12 12zM3.5 23c-.276 0-.5-.196-.5-.437C3 18.253 6.134 15 10 15h4c3.866 0 7 3.253 7 7.563 0 .24-.224.437-.5.437h-17z"/></svg>
         </span>
-        <input type="email" name="email" placeholder="E‑mail corporativo" required>
+        <input type="email" name="email" id="email" placeholder="E‑mail corporativo" required>
       </div>
       <div class="field">
         <span class="icon-left">
@@ -198,7 +199,7 @@
       </div>
       <button type="submit" class="submit">Entrar</button>
     </form>
-    <a href="#" class="forgot">Esqueci minha senha</a>
+    <a href="#" class="forgot" onclick="esqueciSenha()">Esqueci minha senha</a>
     <div class="loading" id="loading">Acessando...</div>
   </div>
 
@@ -242,6 +243,52 @@ frm.addEventListener('submit', async (e) => {
     msg.textContent = 'Erro de rede';
   }
 });
+
+async function esqueciSenha() {
+  const email = document.getElementById("email").value.trim();
+  if (!email) {
+    alert("Por favor, preencha o campo de e-mail para continuar.");
+    return;
+  }
+
+  const ip = await obterIP();
+  const params = new URLSearchParams({
+    action: "esqueci",
+    email,
+    ip
+  });
+
+  try {
+    const res = await fetch(URL, { method: "POST", body: params });
+    const resposta = await res.text();
+
+    switch (resposta) {
+      case "ENVIADO":
+        alert("Uma nova senha foi enviada para o seu e-mail.");
+        break;
+      case "LIMITE_EXCEDIDO":
+        alert("Você excedeu o número de tentativas. Tente novamente mais tarde.");
+        break;
+      case "EMAIL_NAO_ENCONTRADO":
+        alert("E-mail não encontrado na base de dados.");
+        break;
+      default:
+        alert("Erro: " + resposta);
+    }
+  } catch (erro) {
+    alert("Erro de rede. Tente novamente.");
+  }
+}
+
+async function obterIP() {
+  try {
+    const res = await fetch("https://api.ipify.org?format=json");
+    const data = await res.json();
+    return data.ip || "desconhecido";
+  } catch {
+    return "desconhecido";
+  }
+}
 </script>
 </body>
 </html>
